[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Scene.gd" type="Script" id=1]
[ext_resource path="res://Sprites/BGs/BackTOKYO.jpg" type="Texture" id=2]
[ext_resource path="res://Sprites/BGs/FlorComplete.png" type="Texture" id=3]
[ext_resource path="res://Scenes/spawner_box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Pause.gd" type="Script" id=5]
[ext_resource path="res://Sounds/UI_sound_click.wav" type="AudioStream" id=6]
[ext_resource path="res://Sprites/Other/reload.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/buttonL.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/PRESSEDbuttonL.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/buttonR.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/PRESSEDbuttonR.png" type="Texture" id=11]
[ext_resource path="res://Sprites/UI/buttonUp.png" type="Texture" id=12]
[ext_resource path="res://Sprites/UI/PRESSEDbuttonUp.png" type="Texture" id=13]
[ext_resource path="res://Fonts/font_score.TTF" type="DynamicFontData" id=14]
[ext_resource path="res://Scripts/Label.gd" type="Script" id=15]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=16]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 640, 48 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 360 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 360 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 31.9802, 32.5907 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 53.2294, 77.4124 )

[sub_resource type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=8]
size = 64
use_mipmaps = true
font_data = ExtResource( 14 )

[sub_resource type="PhysicsMaterial" id=9]
friction = 0.0

[node name="Scene" type="Node"]
script = ExtResource( 1 )

[node name="WorldLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite" parent="WorldLayer"]
visible = false
position = Vector2( 639.46, 416.439 )
scale = Vector2( 0.4, 0.471597 )
texture = ExtResource( 2 )

[node name="Floor" type="StaticBody2D" parent="WorldLayer"]
position = Vector2( 1.58667, 6.34668 )

[node name="Sprite" type="Sprite" parent="WorldLayer/Floor"]
position = Vector2( 638.385, 693.213 )
scale = Vector2( 0.404432, 0.229483 )
texture = ExtResource( 3 )
normal_map = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLayer/Floor"]
position = Vector2( 640, 720 )
shape = SubResource( 2 )

[node name="LeftBorder" type="StaticBody2D" parent="WorldLayer"]
position = Vector2( -32, 360 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLayer/LeftBorder"]
position = Vector2( 0, -8 )
shape = SubResource( 3 )
disabled = true

[node name="RightBorder" type="StaticBody2D" parent="WorldLayer"]
position = Vector2( 1312, 352 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLayer/RightBorder"]
shape = SubResource( 4 )
disabled = true

[node name="destroy_line" type="Area2D" parent="WorldLayer"]
position = Vector2( 640, 608 )
scale = Vector2( 19, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLayer/destroy_line"]
position = Vector2( 0, 64 )
scale = Vector2( 1.00319, 1 )
shape = SubResource( 5 )

[node name="spawner_box" parent="WorldLayer" instance=ExtResource( 4 )]

[node name="destroy2" type="Area2D" parent="WorldLayer"]
position = Vector2( -152.298, 634.413 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldLayer/destroy2"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="PauseLayer" type="CanvasLayer" parent="."]
layer = 15

[node name="Pause" type="Control" parent="PauseLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="sound_click" type="AudioStreamPlayer2D" parent="PauseLayer/Pause"]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -12.435

[node name="Overlay" type="ColorRect" parent="PauseLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.054902, 0.054902, 0.52549 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="PauseLayer/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5
margin_top = -32.5
margin_right = 97.5
margin_bottom = 32.5
custom_fonts/font = SubResource( 7 )
text = "restart"

[node name="Button2" type="Button" parent="PauseLayer/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.1646
margin_top = 54.6827
margin_right = 98.8354
margin_bottom = 119.683
text = "MENU"

[node name="UI_controls" type="CanvasLayer" parent="."]
layer = 5

[node name="Button3" type="Button" parent="UI_controls"]
margin_left = 1177.79
margin_top = 15.5731
margin_right = 1253.79
margin_bottom = 85.5731
icon = ExtResource( 7 )
flat = true

[node name="left" type="TouchScreenButton" parent="UI_controls"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 32, 480 )
scale = Vector2( 0.387409, 0.387409 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
action = "ui_left"

[node name="right" type="TouchScreenButton" parent="UI_controls"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 224, 480 )
scale = Vector2( 0.387409, 0.387409 )
normal = ExtResource( 10 )
pressed = ExtResource( 11 )
action = "ui_right"

[node name="jump" type="TouchScreenButton" parent="UI_controls"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 1024, 416 )
scale = Vector2( 0.542373, 0.542373 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
action = "ui_up"

[node name="Label" type="Label" parent="UI_controls"]
margin_top = 32.0
margin_right = 192.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.859375, 0.198059, 0.198059, 1 )
text = "0"
align = 1
script = ExtResource( 15 )

[node name="Timer" type="Timer" parent="UI_controls"]

[node name="PlayerLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="player" parent="PlayerLayer" instance=ExtResource( 16 )]
position = Vector2( 640, 608 )
physics_material_override = SubResource( 9 )
gravity_scale = 5.0
[connection signal="body_entered" from="WorldLayer/destroy_line" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="WorldLayer/destroy_line" to="." method="_on_Area2D_body_exited"]
[connection signal="script_changed" from="WorldLayer/destroy_line" to="." method="_on_Area2D_script_changed"]
[connection signal="body_entered" from="WorldLayer/destroy2" to="." method="_on_destroy2_body_entered"]
[connection signal="pressed" from="PauseLayer/Pause/Button" to="PauseLayer/Pause" method="_on_Button_pressed"]
[connection signal="pressed" from="PauseLayer/Pause/Button2" to="PauseLayer/Pause" method="_on_Button2_pressed"]
[connection signal="pressed" from="UI_controls/Button3" to="PauseLayer/Pause" method="_on_Button3_pressed"]
[connection signal="mouse_entered" from="UI_controls/Label" to="." method="_on_Label_mouse_entered"]
